fixed horizontal scrolling on all mat-tables, now need to figure out the description lists all over the place

--- a/src/app/shared/css/horizontal-scrolling.scss
+++ b/src/app/shared/css/horizontal-scrolling.scss
@@ -13,7 +13,7 @@
 }
 
 .horizontal-scrolling > :first-child {
+  border: 1px solid blue;
   margin: 0;
-  // padding: 0;
   min-width: 900px;
 }
